--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,7 @@ ext {
     constraintVersion = "1.1.3"
     lifecycleVersion = "1.1.1"
     swipeRefreshVersion = "1.0.0"
-
-    // Jetpack
-    navigation_version = "2.2.0"
+    pagingVersion = "2.1.1"
 
     // Network
     gsonVersion = "2.8.6"
@@ -81,6 +79,7 @@ dependencies {
     implementation "androidx.cardview:cardview:$cardViewVersion"
     implementation "androidx.recyclerview:recyclerview:$recyclerVersion"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshVersion"
+    implementation "androidx.paging:paging-runtime:$pagingVersion"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -88,8 +87,6 @@ dependencies {
 
     // Jetpack
     implementation "android.arch.lifecycle:extensions:$lifecycleVersion"
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Network
     implementation "com.google.code.gson:gson:$gsonVersion"
@@ -99,6 +96,13 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // Dagger
+    implementation "com.google.dagger:dagger:2.27"
+    kapt "com.google.dagger:dagger-compiler:2.27"
+
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // Media
     implementation "com.github.bumptech.glide:glide:$glideVersion"
