Add details resources

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ ext {
 
     // Other
     googleMaps_version = "17.0.0"
+    indicatorVersion = "2.1.2"
 
     // Testing
     junit_version = "4.12"
@@ -110,4 +111,5 @@ dependencies {
 
     // Others
     implementation "com.google.android.gms:play-services-maps:$googleMaps_version"
+    implementation "me.relex:circleindicator:$indicatorVersion"
 }
