--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ ext {
     constraintVersion = "2.0.0-alpha3"
     materialVersion = "1.2.0-alpha05"
     cardViewVersion = "1.0.0"
-    recyclerVersion = "1.2.0-alpha01"
+    recyclerVersion = "1.2.0-alpha02"
     constraintVersion = "1.1.3"
     lifecycleVersion = "1.1.1"
     swipeRefreshVersion = "1.0.0"
@@ -52,6 +52,10 @@ ext {
     retrofitAdapterVersion = "1.0.0"
     okhttpVersion = "4.3.1"
     coroutines_version = "1.3.0"
+    stethoVersion = "1.5.1"
+
+    // DI
+    daggerVersion = "2.27"
 
     // Media
     glideVersion = "4.11.0"
@@ -97,13 +101,12 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "com.facebook.stetho:stetho:$stethoVersion"
+    implementation "com.facebook.stetho:stetho-okhttp3:$stethoVersion"
 
-    // Dagger
-    implementation "com.google.dagger:dagger:2.27"
-    kapt "com.google.dagger:dagger-compiler:2.27"
-
-    implementation 'com.facebook.stetho:stetho:1.5.1'
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+    // DI
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     // Media
     implementation "com.github.bumptech.glide:glide:$glideVersion"
