--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "0.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -63,6 +64,7 @@ ext {
     // Other
     googleMaps_version = "17.0.0"
     indicatorVersion = "2.1.2"
+    multidex_version = "1.0.3"
 
     // Testing
     junit_version = "4.12"
@@ -115,4 +117,5 @@ dependencies {
     // Others
     implementation "com.google.android.gms:play-services-maps:$googleMaps_version"
     implementation "me.relex:circleindicator:$indicatorVersion"
+    implementation "com.android.support:multidex:$multidex_version"
 }
