--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ ext {
     vectorDrawableVersion = "1.0.1"
     coreKtxVersion = "1.2.0"
     constraintVersion = "2.0.0-alpha3"
-    materialVersion = "1.2.0-alpha05"
+    materialVersion = "1.2.0-alpha06"
     cardViewVersion = "1.0.0"
     recyclerVersion = "1.2.0-alpha02"
     constraintVersion = "1.1.3"
@@ -73,6 +73,8 @@ ext {
     // Testing
     junit_version = "4.12"
     junitExt_version = "1.1.1"
+    mockk_version = "1.9.3.kotlin12"
+    truth_version = "1.0.1"
 }
 
 dependencies {
@@ -81,6 +83,8 @@ dependencies {
     // Testing
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$junitExt_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "com.google.truth:truth:$truth_version"
 
     // AndroidX
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
