--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,35 +40,35 @@ android {
 
 ext {
     // AndroidX
-    appCompatVersion = "1.1.0"
-    vectorDrawableVersion = "1.0.1"
-    coreKtxVersion = "1.2.0"
-    constraintVersion = "2.0.0-alpha3"
-    materialVersion = "1.2.0-alpha06"
-    cardViewVersion = "1.0.0"
-    recyclerVersion = "1.2.0-alpha02"
-    constraintVersion = "1.1.3"
-    lifecycleVersion = "1.1.1"
-    swipeRefreshVersion = "1.0.0"
-    pagingVersion = "2.1.2"
+    appCompat_version = "1.1.0"
+    vectorDrawable_version = "1.0.1"
+    coreKtx_version = "1.2.0"
+    constraint_version = "2.0.0-alpha3"
+    material_version = "1.2.0-alpha06"
+    cardView_version = "1.0.0"
+    recycler_version = "1.2.0-alpha02"
+    constraint_version = "1.1.3"
+    lifecycle_version = "1.1.1"
+    swipeRefresh_version = "1.0.0"
+    paging_version = "2.1.2"
 
     // Network
-    gsonVersion = "2.8.6"
-    retrofitVersion = "2.7.1"
-    retrofitAdapterVersion = "1.0.0"
-    okhttpVersion = "4.3.1"
+    gson_version = "2.8.6"
+    retrofit_version = "2.7.1"
+    retrofitAdapter_version = "1.0.0"
+    okhttp_version = "4.3.1"
     coroutines_version = "1.3.0"
-    stethoVersion = "1.5.1"
+    stetho_version = "1.5.1"
 
     // DI
-    daggerVersion = "2.27"
+    dagger_version = "2.27"
 
     // Media
-    glideVersion = "4.11.0"
+    glide_version = "4.11.0"
 
     // Other
     googleMaps_version = "17.0.0"
-    indicatorVersion = "2.1.2"
+    indicator_version = "2.1.2"
 
     // Testing
     junit_version = "4.12"
@@ -87,42 +87,42 @@ dependencies {
     testImplementation "com.google.truth:truth:$truth_version"
 
     // AndroidX
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
-    implementation "com.google.android.material:material:$materialVersion"
-    implementation "androidx.vectordrawable:vectordrawable:$vectorDrawableVersion"
-    implementation "androidx.cardview:cardview:$cardViewVersion"
-    implementation "androidx.recyclerview:recyclerview:$recyclerVersion"
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshVersion"
-    implementation "androidx.paging:paging-runtime:$pagingVersion"
+    implementation "androidx.appcompat:appcompat:$appCompat_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.vectordrawable:vectordrawable:$vectorDrawable_version"
+    implementation "androidx.cardview:cardview:$cardView_version"
+    implementation "androidx.recyclerview:recyclerview:$recycler_version"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefresh_version"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.core:core-ktx:$coreKtxVersion"
+    implementation "androidx.core:core-ktx:$coreKtx_version"
 
     // Jetpack
-    implementation "android.arch.lifecycle:extensions:$lifecycleVersion"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
     // Network
-    implementation "com.google.code.gson:gson:$gsonVersion"
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation "com.facebook.stetho:stetho:$stethoVersion"
-    implementation "com.facebook.stetho:stetho-okhttp3:$stethoVersion"
+    implementation "com.facebook.stetho:stetho:$stetho_version"
+    implementation "com.facebook.stetho:stetho-okhttp3:$stetho_version"
 
     // DI
-    implementation "com.google.dagger:dagger:$daggerVersion"
-    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // Media
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     // Others
     implementation "com.google.android.gms:play-services-maps:$googleMaps_version"
-    implementation "me.relex:circleindicator:$indicatorVersion"
+    implementation "me.relex:circleindicator:$indicator_version"
 }
